[package]
name = "tyin_rust"
version = "0.1.0"
authors = ["seabye <seabye@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [dependencies]

# #### start
[workspace]
members = ["work"]

[dependencies]
# regex = "1.4.6"
json = "0.12.4"