[package]
name = "machine_tool_wasm"
version = "0.1.0"
authors = ["seabye <seabye@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [dependencies]

# #### start
[workspace]
members = ["work"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.73"

# [profile.release]
# lto = true