[package]
name = "wasm"
version = "0.1.0"
authors = ["seabye <seabye@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [dependencies]

# #### start
[lib]
crate-type = ["cdylib", "rlib"]

[workspace]
members = ["work"]

[dependencies]
wasm-bindgen = "0.2.73"
# web-sys = "0.3.50"
# json = "0.12.4"