[package]
name = "work"
version = "0.1.0"
authors = ["seabye <seabye@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [dependencies]

# #### start
[dependencies]
wasm = { path = "../" }

# [profile.release]
# lto = true